Se inicia cuarto proyecto

--- a/FCCampDataAnalysis_A2.ipynb
+++ b/FCCampDataAnalysis_A2.ipynb
@@ -176,6 +176,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Page View Time Series Visualizer\n",
+    "\n",
+    "Para este proyecto visualizarás datos de series temporales utilizando un gráfico de líneas, un gráfico de barras y gráficos de caja. Utilizarás Pandas, Matplotlib y Seaborn para visualizar un conjunto de datos que contiene el número de páginas vistas cada día en el foro de freeCodeCamp.org desde 2016-05-09 hasta 2019-12-03. Las visualizaciones de datos te ayudarán a entender los patrones de las visitas y a identificar el crecimiento anual y mensual\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Actividades a reaizar\n",
+    "* Usa Pandas para importar los datos de `fcc-forum-pageviews.csv`. Establezca el índice en la columna \"date\".\n",
+    "* Limpiar los datos filtrando los días en los que las páginas vistas estaban en el 2,5% superior del conjunto de datos o en el 2,5% inferior del conjunto de datos.\n",
+    "* Crear una función `draw_line_plot` que utilice Matplotlib para dibujar un gráfico de líneas. El título debería ser \"Daily freeCodeCamp Forum Page Views 5/2016-12/2019\". La etiqueta en el eje x debe ser \"Date\" y la etiqueta en el eje y debe ser \"Page Views\".\n",
+    "* Crear una función `draw_bar_plot` que dibuje un gráfico de barras. Debe mostrar el promedio de páginas vistas diarias para cada mes agrupadas por año. La leyenda debe mostrar las etiquetas de los meses y tener un título de \"Months\". En el gráfico, la etiqueta del eje x debe ser \"Years\" y la etiqueta del eje y debe ser \"Average Page Views\".\n",
+    "* Cree una función `draw_box_plot` que utilice Searborn para dibujar dos gráficos de caja adyacentes. Estos gráficos de caja deben mostrar cómo se distribuyen los valores dentro de un año o mes determinado y cómo se comparan a lo largo del tiempo. El título del primer gráfico debe ser \"Year-wise Box Plot (Trend)\" y el título del segundo gráfico debe ser \"Month-wise Box Plot (Seasonality)\", Asegurarse que las etiquetas de los meses en la parte inferior comienzan en \"enero\" y que los ejes (x,x) están etiquetados correctamente.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
