--- a/FCCampDataAnalysis_A2.ipynb
+++ b/FCCampDataAnalysis_A2.ipynb
@@ -200,6 +200,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Librerias a usar\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from pandas.plotting import register_matplotlib_converters\n",
+    "register_matplotlib_converters()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importe de datos, definiendo indice: 'date'\n",
+    "## Confifurando que se pasaran fechas\n",
+    "df = pd.read_csv(\"fcc-forum-pageviews.csv\", \n",
+    "                 parse_dates=['date'], \n",
+    "                 index_col='date')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clean data\n",
+    "df = df[\n",
+    "        (df['value'] >= df['value'].quantile(0.025)) &\n",
+    "        (df['value'] <= df['value'].quantile(0.975))\n",
+    "        ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_line_plot():\n",
+    "    \"\"\"Grafico de lineas\"\"\"\n",
+    "    fig, ax = plt.subplots(figsize=(10,5))\n",
+    "    ax.plot(df.index, df['value'], 'r', linewidth=1)\n",
+    "    ax.set_title('Daily freeCodeCamp Forum Page Views 5/2016-12/2019')\n",
+    "    ax.set_xlabel('Date')\n",
+    "    ax.set_ylabel('Page Views')\n",
+    "\n",
+    "    # Save image and return fig (don't change this part)\n",
+    "    #fig.savefig('line_plot.png')\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_bar_plot():\n",
+    "   # Draw bar plot\n",
+    "   df['month'] = df.index.month\n",
+    "   df['year'] = df.index.year\n",
+    "   df_bar = df.groupby(['year', 'month'])['value'].mean()\n",
+    "   df_bar = df_bar.unstack()\n",
+    "   \n",
+    "   # Dibuja el grafico de barras\n",
+    "   fig = df_bar.plot.bar(legend=True, figsize=(13,6),\n",
+    "                         ylabel='Average Page Views', xlabel='Years').figure\n",
+    "   \n",
+    "   plt.legend(['January', 'February', 'March', 'April', 'May', 'June', 'July', \n",
+    "               'August', 'September', 'October', 'November', 'December'])\n",
+    "   \n",
+    "   plt.xticks(fontsize=8)\n",
+    "   plt.yticks(fontsize=8)\n",
+    "\n",
+    "   # Save image and return fig (don't change this part)\n",
+    "   fig.savefig('bar_plot.png')\n",
+    "   return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_box_plot():\n",
+    "    # Prepare data for box plots (this part is done!)\n",
+    "    df_box = df.copy()\n",
+    "    df_box.reset_index(inplace=True)\n",
+    "    df_box['year'] = [d.year for d in df_box.date]\n",
+    "    df_box['month'] = [d.strftime('%b') for d in df_box.date]\n",
+    "\n",
+    "    # Draw box plots (using Seaborn)\n",
+    "    df_box['month_num'] = df_box['date'].dt.month\n",
+    "    df_box = df_box.sort_values('month_num')\n",
+    "    \n",
+    "    fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(10,5))\n",
+    "    axes[0] = sns.boxplot(x=df_box['year'], y=df_box['value'], ax= axes[0])\n",
+    "    axes[1] = sns.boxplot(x=df_box['month'], y=df_box['value'], ax= axes[1])\n",
+    "    \n",
+    "    axes[0].set_title('Year-wise Box Plot (Trend)')\n",
+    "    axes[0].set_xlabel('Year')\n",
+    "    axes[0].set_ylabel('Page Views')\n",
+    "    \n",
+    "    axes[1].set_title('Month-wise Box Plot (Seasonality)')\n",
+    "    axes[1].set_xlabel('Month')\n",
+    "    axes[1].set_ylabel('Page Views')\n",
+    "\n",
+    "\n",
+    "    # Save image and return fig (don't change this part)\n",
+    "    fig.savefig('box_plot.png')\n",
+    "    return fig\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -218,7 +340,8 @@
    "hash": "c469c999aae2bf6d578d6881606ced546d1546d312a4811937df5b24665ee8bc"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
