Se empieza quinto proyecto

--- a/FCCampDataAnalysis_A2.ipynb
+++ b/FCCampDataAnalysis_A2.ipynb
@@ -391,6 +391,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sea Level Predictor\n",
+    "Analizarás un conjunto de datos sobre el cambio del nivel medio del mar en el mundo desde 1880. Utilizarás los datos para predecir el cambio del nivel del mar hasta el año 2050.\n",
+    "\n",
+    "Utiliza los datos para completar las siguientes tareas:\n",
+    "* Utiliza Pandas para importar los datos de `epa-sea-level.csv`.\n",
+    "* Utiliza matplotlib para crear un gráfico de dispersión utilizando la columna \"Year\" como eje x y la columna \"CSIRO Adjusted Sea Level\" como eje y.\n",
+    "* Usa la función `linregress` de `scipy.stats` para obtener la pendiente y la intersección de la línea de mejor ajuste. Traza la línea de mejor ajuste sobre el gráfico de dispersión. Haz que la línea pase por el año 2050 para predecir el aumento del nivel del mar en 2050.\n",
+    "* Traza una nueva línea de mejor ajuste utilizando sólo los datos del año 2000 hasta el año más reciente del conjunto de datos. Haz que la línea también pase por el año 2050 para predecir el aumento del nivel del mar en 2050 si el ritmo de aumento continúa como lo ha hecho desde el año 2000.\n",
+    "* La etiqueta x debe ser \"Year\", la etiqueta y debe ser \"Sea Level (inches)\", y el título debe ser \"Rise in the Sea Level\".\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -403,7 +440,8 @@
    "hash": "647c91732f687f04ac3fa3d97a8fa8ca0b712424f88378b61dfaa883ec24d4e6"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('spydr': conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
