Se retoma la practica con python

--- a/FCCampDataAnalysis_A2.ipynb
+++ b/FCCampDataAnalysis_A2.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,16 +464,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<AxesSubplot:title={'center':'Rise in Sea Level'}, xlabel='Year', ylabel='Sea Level (inches)'>"
+       "<module 'matplotlib.pyplot' from 'C:\\\\Users\\\\PC\\\\anaconda3\\\\envs\\\\spydr\\\\lib\\\\site-packages\\\\matplotlib\\\\pyplot.py'>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
