Conjuntos segunda parte

--- a/PyHk_A3_Sets.ipynb
+++ b/PyHk_A3_Sets.ipynb
@@ -342,9 +342,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conjunto:  {2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 34}\n",
+      "Conjunto:  {2, 4, 5, 6, 7, 8, 9, 10, 11, 12, 34}\n",
+      "Conjunto:  {4, 5, 6, 7, 8, 9, 10, 11, 12, 34}\n",
+      "106\n"
+     ]
+    }
+   ],
    "source": [
     "# Forma 2 de resolverlo\n",
     "n = int(input('Elementos: '))\n",
@@ -353,43 +364,13 @@
     "size = int(input('Operaciones totales: ')) # num. operaciones\n",
     "\n",
     "for i in range(size):\n",
-    "    "
+    "    c, *args = map(str, input().split())\n",
+    "    getattr(s, c) (*(int(x) for x in args))\n",
+    "    print('Conjunto: ', s)\n",
+    "\n",
+    "\n",
+    "print(sum(s))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
