--- a/PyHk_A3_Sets.ipynb
+++ b/PyHk_A3_Sets.ipynb
@@ -8,7 +8,7 @@
     "Un conjunto es una colección desordenada de elementos sin entradas duplicadas.\n",
     "Cuando se imprime, se itera o se convierte en una secuencia, sus elementos aparecerán en un orden arbitrario.\n",
     "\n",
-    "## Obtener la media de las estaturas de n participantes"
+    "## Obtener la media de las estaturas de n participantes\n"
    ]
   },
   {
@@ -292,7 +292,7 @@
     "**`.discard(x)`**\n",
     "* Esta operación también elimina el elemento del conjunto.\n",
     "* Si el elemento no existe, no genera un KeyError.\n",
-    "* La operación .discard(x) devuelve None.\n",
+    "* La operación `.discard(x)` devuelve None.\n",
     "\n",
     "**`.pop()`**\n",
     "* Esta operación elimina y devuelve un elemento arbitrario del conjunto.\n",
@@ -371,6 +371,45 @@
     "\n",
     "print(sum(s))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Elementos:'))\n",
+    "s = set(map(int, input('E: ').split()))\n",
+    "for i in range(int(input('Op, totales'))):\n",
+    "    # Elemento {0} operacion que se quiere realizar\n",
+    "    # Elemento {1} opcional es el argumento de la funcion\n",
+    "    eval('s.{0}({1})'.format(*input().split()+['']))\n",
+    "    print('Conjunto', s)\n",
+    "\n",
+    "print(sum(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
